Button Cerrar Tablas

--- a/TopicosAvanzados19A/public_html/Jesus_Lira/dataTables/tables.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/dataTables/tables.html
@@ -30,6 +30,7 @@
                 <h2>Base de datos de <b>Alumnos</b></h2>
               </div>
               <div class="col-sm-6">
+                <a onclick="ocultarAlumn()" class="btn btn-warning" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Cerrar Tabla</span></a>
                 <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Agregar nuevo Alumno</span></a>
                 <a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Eliminar</span></a>
               </div>
@@ -188,6 +189,7 @@
                       <h2>Base de datos de <b>Maestros</b></h2>
                     </div>
                     <div class="col-sm-6">
+                        <a onclick="ocultarMaes()" class="btn btn-warning" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Cerrar Tabla</span></a>
                       <a href="#addMaestro" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Agregar nuevo Maestro</span></a>
                       <a href="#deleteMaestro" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Eliminar</span></a>
                     </div>
@@ -332,6 +334,7 @@
                           <h2>Base de datos de <b>Trabajadore</b></h2>
                         </div>
                         <div class="col-sm-6">
+                            <a onclick="ocultarTrab()" class="btn btn-warning" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Cerrar Tabla</span></a>
                           <a href="#addTrab" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Agregar nuevo empleado</span></a>
                           <a href="#deleteTrab" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Eliminar</span></a>
                         </div>
@@ -470,6 +473,7 @@
                             <h2>Base de datos de <b>Pagos</b></h2>
                           </div>
                           <div class="col-sm-6">
+                              <a onclick="ocultarPag()" class="btn btn-warning" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Cerrar Tabla</span></a>
                             <a href="#addPag" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Agregar nuevo Pago</span></a>
                             <a href="#deletePag" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Eliminar</span></a>
                           </div>
@@ -605,6 +609,7 @@
                             <h2>Base de datos de <b>Evento</b></h2>
                           </div>
                           <div class="col-sm-6">
+                              <a onclick="ocultarEven()" class="btn btn-warning" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Cerrar Tabla</span></a>
                             <a href="#addE" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Agregar nuevo Evento</span></a>
                             <a href="#deleteE" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Eliminar</span></a>
                           </div>
@@ -706,15 +711,6 @@
                   </div>
                       </div>
                     </div>
-
-
-
-
-
-
-
-
-
 
   </body>
 </html>
