Nueva imagen alumno

--- a/TopicosAvanzados19A/public_html/Jesus_Lira/dataTables/tables.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/dataTables/tables.html
@@ -18,7 +18,7 @@
 
     <!--Div Apartado de Alumnos -->
         <div class="divAlumnos">
-      <img class="alumnos" src="img/alumnos.jpg" alt="La imagen no se ha podido Cargar :(" onclick="mostrarAlumn()">
+      <img class="alumnos" src="img/alumnos.png" alt="La imagen no se ha podido Cargar :(" onclick="mostrarAlumn()">
       <h1>Alumnos</h1>
 
       <div id="alumn" style="display:none;"> <!--Tabla de Alumnos-->
@@ -711,6 +711,10 @@
                   </div>
                       </div>
                     </div>
+
+                <div class="separador"></div> <!--separador de DIV -->
+
+
 
   </body>
 </html>
