--- a/TopicosAvanzados19A/public_html/Jesus_Lira/dataTables/tables.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/dataTables/tables.html
@@ -27,7 +27,7 @@
                 <div class="table-title">
                     <div class="row">
                         <div class="col-sm-6">
-                <h2>Base de datos de <b>Alumnos</b></h2>
+                <h2><b>Alumnos</b></h2>
               </div>
               <div class="col-sm-6">
                 <a onclick="ocultarAlumn()" class="btn btn-warning" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Cerrar Tabla</span></a>
@@ -186,7 +186,7 @@
                       <div class="table-title">
                           <div class="row">
                               <div class="col-sm-6">
-                      <h2>Base de datos de <b>Maestros</b></h2>
+                      <h2><b>Maestros</b></h2>
                     </div>
                     <div class="col-sm-6">
                         <a onclick="ocultarMaes()" class="btn btn-warning" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Cerrar Tabla</span></a>
@@ -470,7 +470,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-sm-6">
-                            <h2>Base de datos de <b>Pagos</b></h2>
+                            <h2><b>Pagos</b></h2>
                           </div>
                           <div class="col-sm-6">
                               <a onclick="ocultarPag()" class="btn btn-warning" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Cerrar Tabla</span></a>
@@ -606,7 +606,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-sm-6">
-                            <h2>Base de datos de <b>Evento</b></h2>
+                            <h2><b>Evento</b></h2>
                           </div>
                           <div class="col-sm-6">
                               <a onclick="ocultarEven()" class="btn btn-warning" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Cerrar Tabla</span></a>
