--- a/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa9/Programa9.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa9/Programa9.html
@@ -30,7 +30,7 @@
 	$('#button').click(function() {
     <!--crea el pdf-->
 		 var doc = new jsPDF();
-<!--las variables que se sustitullen en los registros  para que se pongan en el pdf-->
+//las variables que se sustitullen en los registros  para que se pongan en el pdf
 		var name = $('#name').val();
 		var carrera = $('#carrera').val();
 		var semestre = $('#semestre').val();
@@ -38,10 +38,10 @@
     var fecha = $('#fecha').val();
 
 		doc.setFontSize(15);
-<!--informacion que se imprimira en el pdf con los registros cambiados con los datos que el usuario ingreso-->
+//informacion que se imprimira en el pdf con los registros cambiados con los datos que el usuario ingreso-->
 		doc.text(15, 20, "Por este medio se le informa que el alumno "+name+"\rcon matricula "+matricula+" de la carrea de "+carrera+"\rcursando actualmente el "+semestre+" semestre no pudo asistir a clases\ren la fecha "+fecha+" por cuestiones ajenas a el.\rEsperemos considere la asistencia en la fecha emitida.");
     doc.text('Atentamente: \rServicios Escolares\r________________________\rFirma de responsable.',150,120,'center');
-     doc.save('justificacion.pdf');   <!-- nombre con el que se guarda al descargar el pdf-->
+     doc.save('justificacion.pdf');   //nombre con el que se guarda al descargar el pdf-->
 	});
 </script>
 </body>
