--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Admin/tables.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Admin/tables.html
@@ -32,12 +32,12 @@
               <div class="col-sm-6">
                 <a onclick="ocultarAlumn()" class="btn btn-warning" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Cerrar Tabla</span></a>
                 <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Agregar nuevo Alumno</span></a>
-                <a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Eliminar</span></a>
+                
               </div>
                     </div>
                 </div>
                 <table class="table table-striped table-hover">
-                    <tdead>
+                    <thead>
                         <tr>
                             <td>Matricula</td>
                             <td>Nombre</td>
@@ -46,7 +46,7 @@
                             <td>Grado</td>
                             <td>Nivel</td>
                         </tr>
-                    </tdead>
+                    </thead>
                     <tbody>
                           <td></td>
                           <td></td>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="form-group">
                   <label>Apellido Paterno</label>
-                  <input type="email" class="form-control" required>
+                  <input type="text" class="form-control" required>
                 </div>
                 <div class="form-group">
                   <label>Apellido Materno</label>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="form-group">
                   <label>Grado</label>
-                  <input type="text" class="form-control" required>
+                  <input type="Number" class="form-control" required>
                 </div>
                 <div class="form-group">
                   <label>Nivel</label>
@@ -105,7 +105,7 @@
               </div>
               <div class="modal-footer">
                 <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                <input type="submit" class="btn btn-success" value="Add">
+                <input type="submit" class="btn btn-success" value="Add" onclick="agregarAlumno()">
               </div>
             </form>
           </div>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="form-group">
                   <label>Apellido Paterno</label>
-                  <input type="email" class="form-control" required>
+                  <input type="text" class="form-control" required>
                 </div>
                 <div class="form-group">
                   <label>Apellido Materno</label>
@@ -196,15 +196,15 @@
                           </div>
                       </div>
                       <table class="table table-striped table-hover">
-                          <tdead>
+                          <thead>
                               <tr>
                                   <td>Matricula</td>
                                   <td>Nombre</td>
                                   <td>Apellido Paterno</td>
                                   <td>Apellido Materno</td>
-                                  <td>Tipo</td>
+
                               </tr>
-                          </tdead>
+                          </thead>
                           <tbody>
                                 <td></td>
                                 <td></td>
@@ -241,7 +241,7 @@
                       </div>
                       <div class="form-group">
                         <label>Apellido Paterno</label>
-                        <input type="email" class="form-control" required>
+                        <input type="text" class="form-control" required>
                       </div>
                       <div class="form-group">
                         <label>Apellido Materno</label>
@@ -276,7 +276,7 @@
                       </div>
                       <div class="form-group">
                         <label>Apellido Paterno</label>
-                        <input type="email" class="form-control" required>
+                        <input type="text" class="form-control" required>
                       </div>
                       <div class="form-group">
                         <label>Apellido Materno</label>
@@ -331,7 +331,7 @@
                           <div class="table-title">
                               <div class="row">
                                   <div class="col-sm-6">
-                          <h2>Base de datos de <b>Trabajadore</b></h2>
+                          <h2><b>Trabajadores</b></h2>
                         </div>
                         <div class="col-sm-6">
                             <a onclick="ocultarTrab()" class="btn btn-warning" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Cerrar Tabla</span></a>
@@ -341,14 +341,14 @@
                               </div>
                           </div>
                           <table class="table table-striped table-hover">
-                              <tdead>
+                              <thead>
                                   <tr>
                                       <td>Matricula</td>
                                       <td>Nombre</td>
                                       <td>Apellido Paterno</td>
                                       <td>Apellido Materno</td>
                                   </tr>
-                              </tdead>
+                              </thead>
                               <tbody>
                                     <td></td>
                                     <td></td>
@@ -388,7 +388,7 @@
                           </div>
                           <div class="form-group">
                             <label>Apellido Paterno</label>
-                            <input type="email" class="form-control" required>
+                            <input type="text" class="form-control" required>
                           </div>
                           <div class="form-group">
                             <label>Apellido Materno</label>
@@ -419,7 +419,7 @@
                           </div>
                           <div class="form-group">
                             <label>Apellido Paterno</label>
-                            <input type="email" class="form-control" required>
+                            <input type="text" class="form-control" required>
                           </div>
                           <div class="form-group">
                             <label>Apellido Materno</label>
@@ -480,14 +480,14 @@
                                 </div>
                             </div>
                             <table class="table table-striped table-hover">
-                                <tdead>
+                                <thead>
                                     <tr>
                                         <td>ID</td>
                                         <td>Monto</td>
                                         <td>Fecha Pago</td>
                                         <td>Matricula</td>
                                     </tr>
-                                </tdead>
+                                </thead>
                                 <tbody>
                                       <td></td>
                                       <td></td>
@@ -524,7 +524,7 @@
                             </div>
                             <div class="form-group">
                               <label>Fecha Pago</label>
-                              <input type="email" class="form-control" required>
+                              <input type="text" class="form-control" required>
                             </div>
                             <div class="form-group">
                               <label>Matricula</label>
@@ -555,7 +555,7 @@
                             </div>
                             <div class="form-group">
                               <label>Fecha de Pago</label>
-                              <input type="email" class="form-control" required>
+                              <input type="text" class="form-control" required>
                             </div>
                             <div class="form-group">
                               <label>Matricula</label>
@@ -616,12 +616,12 @@
                                 </div>
                             </div>
                             <table class="table table-striped table-hover">
-                                <tdead>
+                                <thead>
                                     <tr>
                                         <td>ID</td>
                                         <td>Nombre</td>
                                     </tr>
-                                </tdead>
+                                </thead>
                                 <tbody>
                                       <td></td>
                                       <td></td>
