--- a/TopicosAvanzados19A/public_html/Cosme_Magaña/Unidad2/Programa 9/Programa09.html
+++ b/TopicosAvanzados19A/public_html/Cosme_Magaña/Unidad2/Programa 9/Programa09.html
@@ -19,6 +19,8 @@
 
 <input type="text" id="matricula" class="form-control form-control-success" placeholder="matricula"><br>
 
+
+<!-- Campos del pdf para rellenar-->
 		<input type="text" id="carrera" class="form-control form-control-success" value="" placeholder="Carrera" /><br>
 		<input type="text" id="semestre" class="form-control form-control-success" value="" placeholder="Semestre" /><br>
 		<input type="text" id="matricula" class="form-control form-control-success" value="" placeholder="Matricula"/><br>
